--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,18 @@ node_modules/
 dist/
 backend/prisma/migrations/
 frontend/vite.config.ts.timestamp-*
+
+# Ignore node_modules in both frontend and backend
+frontend/node_modules/
+backend/node_modules/
+
+# Ignore build output
+frontend/dist/
+backend/dist/
+
+# Ignore environment files
+.env
+*.env
+
+# Ignore logs and temp files
+*.log
