--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.10",
     "@types/nodemailer": "^6.4.17",
     "aws-sdk": "^2.1692.0",
@@ -23,6 +24,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.10.0",
     "prisma": "^6.5.0",
     "socket.io": "^4.8.1",
