--- a/backend/package.json
+++ b/backend/package.json
@@ -23,9 +23,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "prisma": "^6.5.0",
     "socket.io": "^4.8.1",
@@ -35,6 +37,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12"
   }
 }
