--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@glidejs/glide": "^3.7.1",
     "@hookform/resolvers": "^4.1.3",
     "@react-google-maps/api": "^2.20.6",
     "@react-oauth/google": "^0.12.1",
@@ -20,6 +21,7 @@
     "axios": "^1.8.3",
     "echarts-for-react": "^3.0.3",
     "google-auth-library": "^9.15.1",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
